--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,54 @@
-  header {
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+  
+header {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 2rem;
     padding: 2rem;
     background-color: #f0f0f0;
-  }
+}
   
-  .logo-container {
+.logo-container {
     display: flex;
     align-items: center;
     margin-bottom: 2rem;
-  }
+}
   
-  .logo-container img {
+.logo-container img {
     width: 180px; 
-  }
+}
   
-  .search-container {
+.search-container {
     display: flex;
     align-items: center;
-  }
+}
 
-  .tag-input {
+.tag-input {
     padding: 0.5rem;
     margin-right: 0.5rem;
     width: 360px;
-  }
+}
 
-  .location-input {
+.location-input {
     padding: 0.5rem;
     margin-right: 0.5rem;
     width: 170px;
-  }
+}
   
-  #searchButton {
+#searchButton {
     padding: 0.5rem 1rem;
     background-color: #bf2519;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
+}
+
+li {
+    list-style-type: none;
+}
   
